[package]
name = "libc"
version = "0.2.44"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/libc"
homepage = "https://github.com/rust-lang/libc"
documentation = "http://doc.rust-lang.org/libc"
description = """
A library for types and bindings to native C functions often found in libc or
other common platform libraries.
"""
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/appveyor.yml"]

[badges]
travis-ci = { repository = "rust-lang/libc" }
appveyor = { repository = "rust-lang/libc", project_name = "rust-lang-libs/libc" }

[dependencies]
rustc-std-workspace-core = { version = "1.0.0", optional = true }

[features]
default = ["use_std"]
use_std = []
align = []
rustc-dep-of-std = ['align', 'rustc-std-workspace-core']

[workspace]
members = ["libc-test"]
