[package]
name = "libc"
version = "0.2.74"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/libc"
homepage = "https://github.com/rust-lang/libc"
documentation = "http://doc.rust-lang.org/libc"
keywords = ["libc", "ffi", "bindings", "operating", "system" ]
categories = ["external-ffi-bindings", "no-std", "os"]
build = "build.rs"
exclude = ["/ci/*", "/azure-pipelines.yml"]
description = """
Raw FFI bindings to platform libraries like libc.
"""

[badges]
cirrus-ci = { repository = "rust-lang/libc", branch = "master" }
azure-devops = { project = "rust-lang2/libc", pipeline = "rust-lang.libc%20(1)" }

[dependencies]
rustc-std-workspace-core = { version = "1.0.0", optional = true }

[features]
default = ["std"]
std = []
align = []
rustc-dep-of-std = ['align', 'rustc-std-workspace-core']
extra_traits = []
const-extern-fn = []
# use_std is deprecated, use `std` instead
use_std = [ 'std' ]

[workspace]
members = ["libc-test"]
