[package]
name = "ctest-test"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
publish = false
edition = "2021"

[build-dependencies]
ctest = { path = "../ctest" }
cc = "1.0"

[dependencies]
cfg-if = "1.0.0"
libc = { path = ".." }

[[bin]]
name = "t1"
test = false

[[bin]]
name = "t2"
test = false

[[bin]]
name = "t1_cxx"
test = false

[[bin]]
name = "t2_cxx"
test = false

#
# TODO: These should be moved to the root Cargo.toml as `[workspace.lints.*]` once MSRV is abve 1.64
#       replace it with `[lints] workspace=true`
#

[lints.rust]
# TODO: make ident usage consistent in each file
unused_qualifications = "allow"

[lints.clippy]
# TODO: fix these, and enable pedantic lints with needed exceptions
match_like_matches_macro = "allow"
eq_op = "allow"
