[package]
name = "ctest-test"
version = "0.1.0"
publish = false
edition = "2021"
rust-version = "1.88"

[build-dependencies]
ctest = { path = "../ctest" }
cc = "1.2"

[dev-dependencies]
ctest = { path = "../ctest" }

[dependencies]
libc = { path = ".." }

[[bin]]
name = "t1"
test = false

[[bin]]
name = "t2"
test = false

[lints]
workspace = true
