[package]
name = "ctest"
version = "0.4.11"
description = "Automated tests of FFI bindings."
exclude = ["CHANGELOG.md"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/libc"
rust-version = "1.63.0"

[dependencies]
anyhow = "1.0"
garando_syntax = "0.1"
cc = "1.2.29"
rustc_version = "0.4"
indoc = "2.0.6"

# FIXME(msrv): These should be moved to the root Cargo.toml as `[workspace.lints.*]`
#              once MSRV is above 1.64 and replaced with `[lints] workspace=true`

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
