# This is a dummy package so the published stable `libc` can have `ctest` in
# the workspace, which works around <https://github.com/release-plz/release-plz/issues/2163>.

[package]
name = "ctest"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/libc"
publish = false
