[package]
name = "ctest"
version = "0.5.0-beta.0"
edition = "2024"
description = "Automated testing of FFI bindings in Rust."
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/libc"
publish = true

[dependencies]
askama = "0.14.0"
cc = "1.2.29"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "visit", "extra-traits"] }
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
