[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "external-ffi-bindings" ,"no-std"]
description = "Type aliases to C types like c_int for use with bindgen"
documentation = "https://docs.rs/cty"
keywords = ["c", "types", "bindgen", "ffi"]
license = "MIT OR Apache-2.0"
name = "cty"
repository = "https://github.com/japaric/cty"
version = "0.2.0"
