[package]
name = "libc-test"
version = "0.1.0"
description = "A test crate for the libc crate."
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cfg-if = "1.0.0"
libc = { path = "..", version = "1.0.0-alpha.1", default-features = false }

[dev-dependencies]
syn = { version = "2.0.91", features = ["full", "visit"] }
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
glob = "0.3.2"
annotate-snippets = { version = "0.11.5", features = ["testing-colors"] }

[build-dependencies]
cc = "1.0.83"
ctest = { path = "../ctest" }
regex = "1.11.1"

[features]
default = ["std"]
std = ["libc/std"]
extra_traits = ["libc/extra_traits"]

[[test]]
name = "main"
path = "test/main.rs"
harness = false

[[test]]
name = "linux-fcntl"
path = "test/linux_fcntl.rs"
harness = false

[[test]]
name = "linux-if-arp"
path = "test/linux_if_arp.rs"
harness = false

[[test]]
name = "linux-ipv6"
path = "test/linux_ipv6.rs"
harness = false

[[test]]
name = "linux-elf"
path = "test/linux_elf.rs"
harness = false

[[test]]
name = "linux-strerror_r"
path = "test/linux_strerror_r.rs"
harness = false

[[test]]
name = "linux-termios"
path = "test/linux_termios.rs"
harness = false

[[test]]
name = "cmsg"
path = "test/cmsg.rs"
harness = true

[[test]]
name = "makedev"
path = "test/makedev.rs"
harness = true

[[test]]
name = "errqueue"
path = "test/errqueue.rs"
harness = true

[[test]]
name = "sigrt"
path = "test/sigrt.rs"
harness = true

[[test]]
name = "semver"
path = "test/semver.rs"
harness = false

[[test]]
name = "primitive_types"
path = "test/primitive_types.rs"
harness = true

[[test]]
name = "style"
path = "test/check_style.rs"
harness = true

[[test]]
name = "style_tests"
path = "test/style_tests.rs"
harness = true

# FIXME(msrv): These should be moved to the root Cargo.toml as `[workspace.lints.*]`
#              once MSRV is above 1.64 and replaced with `[lints] workspace=true`

[lints.rust]
# FIXME(cleanup): make ident usage consistent in each file
unused_qualifications = "allow"

[lints.clippy]
# FIXME(clippy): fix these
needless_return = "allow"
comparison_to_empty = "allow"
unused_io_amount = "allow"
write_with_newline = "allow"
needless_borrows_for_generic_args = "allow"
only_used_in_recursion = "allow"
match_like_matches_macro = "allow"
useless_format = "allow"
wildcard_in_or_patterns = "allow"
nonminimal_bool = "allow"
match_single_binding = "allow"
