[package]
name = "libc-test"
version = "0.1.0"
description = "A test crate for the libc crate."
publish = false
authors = ["The Rust Project Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/libc"

[dependencies]
cfg-if = "1.0.1"
libc = { path = "..", version = "1.0.0-alpha.1", default-features = false }

[dev-dependencies]
syn = { version = "2.0.104", features = ["full", "visit"] }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
glob = "0.3.2"
annotate-snippets = { version = "0.11.5", features = ["testing-colors"] }

[build-dependencies]
cc = "1.2.29"
ctest = { path = "../ctest" }
ctest-next = { path = "../ctest-next" }
regex = "1.11.1"

[features]
default = ["std"]
std = ["libc/std"]
extra_traits = ["libc/extra_traits"]

[[test]]
name = "ctest"
path = "test/ctest.rs"
harness = false

[[test]]
name = "ctest_next"
path = "test/ctest_next.rs"
harness = false

[[test]]
name = "linux-fcntl"
path = "test/linux_fcntl.rs"
harness = false

[[test]]
name = "linux-if-arp"
path = "test/linux_if_arp.rs"
harness = false

[[test]]
name = "linux-ipv6"
path = "test/linux_ipv6.rs"
harness = false

[[test]]
name = "linux-elf"
path = "test/linux_elf.rs"
harness = false

[[test]]
name = "linux-strerror_r"
path = "test/linux_strerror_r.rs"
harness = false

[[test]]
name = "linux-termios"
path = "test/linux_termios.rs"
harness = false

[[test]]
name = "semver"
path = "test/semver.rs"
harness = false

[[test]]
name = "style"
path = "test/check_style.rs"
harness = true

[[test]]
name = "style_tests"
path = "test/style_tests.rs"
harness = true

# FIXME(msrv): These should be moved to the root Cargo.toml as `[workspace.lints.*]`
#              once MSRV is above 1.64 and replaced with `[lints] workspace=true`

[lints.rust]

[lints.clippy]
