[package]
name = "libc-test"
version = "0.1.0"
description = "A test crate for the libc crate."
publish = false
authors = ["The Rust Project Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/libc"

[dependencies]
cfg-if = "1.0.4"
libc = { path = "..", version = "0.2.177", default-features = false }

[dev-dependencies]
syn = { version = "2.0.108", features = ["full", "visit"] }
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
glob = "0.3.3"
annotate-snippets = { version = "0.11.5", features = ["testing-colors"] }

[build-dependencies]
cc = "1.2.43"
# Use the in-tree `ctest` from the `main` branch via crates.io
ctest = "0.5.0-beta.3"
regex = "1.12.2"

[features]
default = ["std"]
std = ["libc/std"]
align = ["libc/align"]
extra_traits = ["libc/extra_traits"]

[[test]]
name = "ctest"
harness = false

[[test]]
name = "linux_fcntl"
harness = false

[[test]]
name = "linux_if_arp"
harness = false

[[test]]
name = "linux_ipv6"
harness = false

[[test]]
name = "linux_elf"
harness = false

[[test]]
name = "linux_strerror_r"
harness = false

[[test]]
name = "linux_termios"
harness = false

[[test]]
name = "semver"
harness = false

# FIXME(msrv): These should be moved to the root Cargo.toml as `[workspace.lints.*]`
#              once MSRV is above 1.64 and replaced with `[lints] workspace=true`

[lints.rust]

[lints.clippy]
